tests/error/type_match/base_case_const_to_non_const_ref.bz
// error: unable to match expression of type 'int32' to a mutable lvalue reference '&mut int32'
function test()
{
	let ci = 0i32;
	let _: &mut int32 = ci;
}
